[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "ciris-edge"
description = "Reticulum-native federation transport for the CIRIS stack"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "CIRIS AI", email = "hello@ciris.ai" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]
# v0.2.0 — pip-install-time subsumption mirroring persist's pattern.
# `pip install ciris-edge` pulls `ciris-persist` (which transitively
# pulls `ciris-verify` and the `ciris-build-sign` /
# `ciris-build-verify` console_scripts onto PATH). Lens / agent /
# registry get one install command for the whole edge+persist+verify
# stack.
#
# Pin to >=1.1.2 because that's the polymorphic-Pipeline cut
# (CIRISPersist#33 Path A bounded): `Pipeline<E: WireEnvelope>` +
# `InlineTextEnvelope` + `default_speak_pipeline` factory — edge's
# `send_inline` / `send_durable_inline` invoke this for outbound
# SPEAK / LLM-prompt / WBD-body transit-touch. Also folds in the
# substrate constructors (CIRISPersist#43) edge's
# `EdgeBuilder::from_keyring_seed_dir` calls for sovereign-mode
# Reticulum adoption.
#
# Pin to <2 because we expect persist to follow semver-major on
# breaking changes; v0.2.x edge consumes v1.x persist. Bump the
# upper bound when v0.3.x edge coordinates with v2.x persist.
# v2.0.2 — Cargo↔pyproject skew fix. Cargo.toml has linked persist
# v5.x since v1.7.0 (currently v5.2.0), but pyproject's
# `ciris-persist>=4.15.0,<5` carried over from the v4.x line and was
# never bumped in lockstep. Net effect on PyPI: edge 1.7.0 / 2.0.0 /
# 2.0.1 wheels published with Requires-Dist asking for persist <5
# while their bundled cdylib expects persist 5 — ResolutionImpossible
# when a downstream consumer (e.g. CIRISLensCore 1.0.0, which pins
# `ciris-persist==5.2.0`) tries to co-install with edge. Flagged by
# the lens-core maintainer. v2.0.2 is a metadata-only cut that aligns
# the pyproject ceiling with what Cargo actually links. All co-resident
# consumers must still share one ciris-persist version process-wide
# (the OnceLock-backed Engine singleton; CIRISPersist#85 EPIC).
# v13.13.0 — lockstep with the Cargo pin at persist v19.0.0 (RC3 charter
# alignment). The bundled cdylib links persist 19; a `<19` ceiling here would
# republish the exact v2.0.2 failure above (Requires-Dist asking for a version
# the cdylib does not expect → ResolutionImpossible for co-resident consumers).
dependencies = [
    "ciris-persist>=19.1.1,<20",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://ciris.ai"
Repository = "https://github.com/CIRISAI/CIRISEdge"
Issues = "https://github.com/CIRISAI/CIRISEdge/issues"

[tool.maturin]
# v0.7.0 (CIRISEdge#17) — `extension-module` is a separate Cargo
# feature now (CIRISPersist discipline; see Cargo.toml `[features]`
# block). Wheel builds need both: `pyo3` lights up the FFI bindings
# (pulls `dep:pyo3`, `ciris-persist/pyo3`, and `transport-reticulum`),
# while `extension-module` flips `pyo3/extension-module` so the linker
# doesn't search for a libpython — the host interpreter provides the
# symbols when the wheel is imported. `cargo test --features pyo3`
# (no `extension-module`) still works because tests need the libpython
# link.
#
# v0.13.0 (CIRISEdge#36 GO) — `pyo3` now transitively enables
# `ffi-uniffi`, so the wheel ships BOTH the PyO3 entry surface AND the
# UniFFI bindings. See `Cargo.toml::[features.pyo3]` for the implication
# rationale.
#
# v1.1.4 (CIRISEdge#56) — `transport-http` added so the published wheel
# can actually exercise the HTTPS init surface (v0.19.3 / CIRISEdge#49).
# Without it the API was reachable (FFI is feature-gate-blind) but every
# call raised `ValueError: built without it` at runtime, blocking
# CIRISConformance#3 + #4. `pyo3` already pulls `transport-reticulum`
# transitively; the wheel now ships BOTH transports.
features = ["pyo3", "extension-module", "transport-http"]
module-name = "ciris_edge"
# abi3-py310 — one wheel covers Python 3.10+. v0.7.0 (CIRISEdge#17)
# dropped the py310/py311 minor-version pin so Chaquopy (bundles
# Python 3.10) can consume the same wheel shape as the PyPI desktop
# build path. abi3 is forward-compatible: py310-tagged wheels run on
# 3.11 / 3.12 / 3.13 too. CIRISEdge ships three platform wheels:
# linux-x86_64, linux-aarch64, darwin-aarch64 (darwin-x86_64 omitted
# per GitHub Actions Intel macOS runner capacity issues — matches
# persist's matrix exactly).
python-source = "python"
strip = true

# v0.13.0 (CIRISEdge#36 GO) — bundle the UniFFI bridge Python module +
# the generated `ciris_edge.py` (as `_generated.py` next to the
# wrapper). The wrapper's `_load_uniffi_bindings_module` looks here
# first; falls back to the dev-repo path for local builds.
include = [
    { path = "bindings/python/ciris_edge.py", format = "wheel" },
]

# Maturin's `include` doesn't rename inside the wheel; we wire the
# wrapper's lookup to handle both names. For the install layout, the
# generated `ciris_edge.py` lands at the wheel root next to
# `python/ciris_edge/uniffi_bindings/__init__.py` — the wrapper's
# fallback path resolves both.
